--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nabi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "typescript": "^5.0.4"
