--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only  src/server.ts",
+    "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint:fix": "eslint --fix",
+    "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nabi",
   "license": "ISC",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint": "^8.41.0",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "typescript": "^5.0.4"
@@ -19,6 +25,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0"
   }
 }
