--- a/.eslintrc
+++ b/.eslintrc
@@ -14,17 +14,21 @@
   ],
   "rules": {
     "no-unused-vars": "error",
-    "no-console": "error",
-    "no-undef": "error",
+    "prefer-const": "error",
     "no-unused-expressions": "error",
-    "no-unreachable": "error",
-    "consistent-type-definitions": [
+    "no-undef": "error",
+    "no-console": "warn",
+    "@typescript-eslint/consistent-type-definitions": [
       "error",
       "type"
     ]
   },
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
