--- a/package.json
+++ b/package.json
@@ -22,18 +22,22 @@
     "@typescript-eslint/parser": "^5.59.8",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "eslint": "^8.41.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "mongoose": "^7.2.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "winston": "^3.9.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
